--- a/cube/package.json
+++ b/cube/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.4.2"
   },
   "devDependencies": {
     "request": "^2.81.0",
